--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -3,112 +3,120 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Secure Intake | Mark Bennett</title>
+<title>Confidential Psychological Alignment | Mark Bennett</title>
 
-<script>
-if(!localStorage.getItem("subscription_intent")){
-window.location.href="index.html";
-}
-</script>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
-font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;
-background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+font-family:'Inter',sans-serif;
+background:linear-gradient(135deg,#0b1120,#020617);
+color:#f1f5f9;
+}
+
+header{
+padding:30px 8%;
+display:flex;
+justify-content:space-between;
+align-items:center;
+border-bottom:1px solid rgba(255,255,255,0.05);
+}
+
+.logo{
+font-family:'Playfair Display',serif;
+font-size:28px;
+color:#ffffff;
+}
+
+.logo span{
+color:#d4af37;
+}
+
+nav a{
+color:#cbd5e1;
+margin-left:25px;
+text-decoration:none;
+font-size:14px;
 }
 
 .container{
 max-width:900px;
-margin:40px auto;
-background:#fff;
-padding:40px;
+margin:60px auto;
+padding:50px;
+background:rgba(15,23,42,0.95);
 border-radius:20px;
-box-shadow:0 20px 60px rgba(0,0,0,0.4);
+box-shadow:0 0 60px rgba(0,0,0,0.6);
 }
 
 h1{
+font-family:'Playfair Display',serif;
+font-size:36px;
 text-align:center;
-color:#222;
-margin-bottom:10px;
+margin-bottom:20px;
 }
 
 .subtitle{
 text-align:center;
-color:#555;
-margin-bottom:30px;
+color:#94a3b8;
+line-height:1.8;
+margin-bottom:50px;
 }
 
-.progress-bar{
-width:100%;
-background:#ddd;
-border-radius:20px;
-margin-bottom:30px;
+.section{
+margin-top:50px;
 }
 
-.progress{
-height:12px;
-width:0%;
-background:linear-gradient(90deg,#00c6ff,#0072ff);
-border-radius:20px;
-transition:0.4s;
-}
-
-.step{
-display:none;
-}
-
-.step.active{
-display:block;
-}
-
-.question{
-margin-bottom:25px;
+.section h2{
+color:#d4af37;
+margin-bottom:20px;
+font-size:20px;
 }
 
 label{
-font-weight:bold;
 display:block;
+margin-top:30px;
 margin-bottom:8px;
-color:#222;
+font-weight:500;
 }
 
-textarea,input{
+textarea, input{
 width:100%;
-padding:12px;
-border-radius:10px;
-border:1px solid #ccc;
-font-size:15px;
+padding:16px;
+border-radius:12px;
+border:none;
+background:#1e293b;
+color:#fff;
+font-size:14px;
 }
 
 textarea{
-min-height:120px;
+min-height:140px;
 resize:vertical;
 }
 
-.buttons{
-text-align:center;
-margin-top:20px;
-}
-
 button{
-padding:12px 25px;
+margin-top:50px;
+width:100%;
+padding:18px;
+border-radius:14px;
 border:none;
-border-radius:25px;
-background:#0072ff;
-color:#fff;
-font-size:15px;
+background:#d4af37;
+color:#0f172a;
+font-weight:600;
+font-size:16px;
 cursor:pointer;
-margin:5px;
 }
 
-.trust{
-margin-top:40px;
-padding:25px;
-background:#f4f4f4;
-border-radius:15px;
-font-size:14px;
-color:#333;
+button:hover{
+opacity:0.9;
+}
+
+.footer{
+margin-top:60px;
+text-align:center;
+font-size:13px;
+color:#94a3b8;
 line-height:1.6;
 }
 </style>
@@ -116,107 +124,112 @@ line-height:1.6;
 
 <body>
 
+<header>
+<div class="logo">Mark <span>Bennett</span></div>
+<nav>
+<a href="#">About</a>
+<a href="#">Team</a>
+<a href="#">Process</a>
+<a href="#">Contact</a>
+</nav>
+</header>
+
 <div class="container">
 
-<h1>Personal Alignment Intake</h1>
+<h1>🔒 Confidential Psychological Alignment Profile</h1>
+
 <p class="subtitle">
-Confidential. Human-reviewed by Mark Bennett & Team – New York, USA
+Every message you receive is written personally by <strong>Mark Bennett</strong> and reviewed by our U.S.-based behavioral insight team.  
+This is not AI-generated automation.  
+This is deliberate, human-crafted psychological guidance tailored to your inner world.
 </p>
 
-<div class="progress-bar">
-<div class="progress" id="progress"></div>
-</div>
-
 <form action="https://formsubmit.co/Markbennet711@gmail.com" method="POST">
-<input type="hidden" name="_captcha" value="false">
-<input type="hidden" name="_subject" value="New Personal Alignment Submission">
-<input type="hidden" name="_next" value="index.html">
 
-<div class="step active">
-<div class="question">
+<input type="hidden" name="_subject" value="New Premium Client Submission">
+<input type="hidden" name="_captcha" value="false">
+
+<div class="section">
+<h2>Personal Identification</h2>
+
 <label>Full Name</label>
-<input type="text" name="Full_Name" required>
-</div>
-<div class="question">
+<input type="text" name="Name" required>
+
 <label>Email Address</label>
 <input type="email" name="Email" required>
-</div>
-<div class="question">
-<label>Country</label>
-<input type="text" name="Country" required>
-</div>
+
+<label>Timezone</label>
+<input type="text" name="Timezone" required>
+
 </div>
 
-<div class="step">
-<div class="question"><label>Q1</label><textarea name="Q1" required></textarea></div>
-<div class="question"><label>Q2</label><textarea name="Q2" required></textarea></div>
-<div class="question"><label>Q3</label><textarea name="Q3" required></textarea></div>
-<div class="question"><label>Q4</label><textarea name="Q4" required></textarea></div>
-<div class="question"><label>Q5</label><textarea name="Q5" required></textarea></div>
-<div class="question"><label>Q6</label><textarea name="Q6" required></textarea></div>
+<div class="section">
+<h2>Deep Psychological Exploration</h2>
+
+<label>1️⃣ What is the deepest part of you that you rarely show anyone?</label>
+<textarea name="q1_deepest_part" required></textarea>
+
+<label>2️⃣ When your emotional weight feels heavy, what usually triggers it?</label>
+<textarea name="q2_when_heavy" required></textarea>
+
+<label>3️⃣ What does your inner voice say during moments of doubt?</label>
+<textarea name="q3_inner_voice" required></textarea>
+
+<label>4️⃣ What forgotten truth about yourself needs to be remembered?</label>
+<textarea name="q4_forgotten_truth" required></textarea>
+
+<label>5️⃣ What hidden truth are you afraid to fully accept?</label>
+<textarea name="q5_hidden_truth" required></textarea>
+
+<label>6️⃣ What emotional state do you most desire to feel daily?</label>
+<textarea name="q6_desired_feeling" required></textarea>
+
+<label>7️⃣ What kind of presence or support do you deeply need right now?</label>
+<textarea name="q7_needed_presence" required></textarea>
+
+<label>8️⃣ What message tone makes you feel understood? (Direct, gentle, firm, motivational, strategic)</label>
+<textarea name="q8_message_style" required></textarea>
+
+<label>9️⃣ Are there specific phrases or tones you want us to avoid?</label>
+<textarea name="q9_avoid_phrases" required></textarea>
+
+<label>🔟 What area of your life feels emotionally protected or guarded?</label>
+<textarea name="q10_protected_space" required></textarea>
+
+<label>11️⃣ What thought appears right before you feel like giving up?</label>
+<textarea name="q11_before_giving_up" required></textarea>
+
+<label>12️⃣ Do you fear ease or success in any part of your life?</label>
+<textarea name="q12_fear_of_ease" required></textarea>
+
+<label>13️⃣ What would an ideal daily experience feel like for you?</label>
+<textarea name="q13_daily_experience" required></textarea>
+
+<label>14️⃣ What truth anchors you when life feels unstable?</label>
+<textarea name="q14_anchor_truth" required></textarea>
+
+<label>15️⃣ What brave step are you currently avoiding?</label>
+<textarea name="q15_brave_step" required></textarea>
+
+<label>16️⃣ Are there sensitive topics we must approach carefully?</label>
+<textarea name="q16_sensitive_topics" required></textarea>
+
+<label>17️⃣ What core life areas should our daily guidance focus on? (Career, discipline, relationships, self-worth, clarity, leadership, etc.)</label>
+<textarea name="q17_focus_areas" required></textarea>
+
 </div>
 
-<div class="step">
-<div class="question"><label>Q7</label><textarea name="Q7" required></textarea></div>
-<div class="question"><label>Q8</label><textarea name="Q8" required></textarea></div>
-<div class="question"><label>Q9</label><textarea name="Q9" required></textarea></div>
-<div class="question"><label>Q10</label><textarea name="Q10" required></textarea></div>
-<div class="question"><label>Q11</label><textarea name="Q11" required></textarea></div>
-<div class="question"><label>Q12</label><textarea name="Q12" required></textarea></div>
-</div>
-
-<div class="step">
-<div class="question"><label>Q13</label><textarea name="Q13" required></textarea></div>
-<div class="question"><label>Q14</label><textarea name="Q14" required></textarea></div>
-<div class="question"><label>Q15</label><textarea name="Q15" required></textarea></div>
-<div class="question"><label>Q16</label><textarea name="Q16" required></textarea></div>
-<div class="question"><label>Q17</label><textarea name="Q17" required></textarea></div>
-</div>
-
-<div class="buttons">
-<button type="button" onclick="prevStep()">Back</button>
-<button type="button" onclick="nextStep()">Next</button>
-<button type="submit">Submit Securely</button>
-</div>
+<button type="submit">Secure My Personalized Daily Psychological Guidance</button>
 
 </form>
 
-<div class="trust">
-<strong>Official Review Notice</strong><br><br>
-All submissions are reviewed personally by Mark Bennett and his human advisory team in New York.<br>
-No automated AI responses. No resale of data. Full confidentiality guaranteed.<br><br>
-📍 447 Broadway, New York, NY 10013, United States<br>
-📧 Markbennet711@gmail.com
+<div class="footer">
+📍 Headquarters: 1209 Orange Street, Wilmington, Delaware, United States  
+All responses are reviewed personally by Mark Bennett.  
+Human-Written. Confidential. Structured. Strategic.
 </div>
 
 </div>
-
-<script>
-let currentStep=0;
-const steps=document.querySelectorAll(".step");
-const progress=document.getElementById("progress");
-
-function showStep(step){
-steps.forEach((s,i)=>s.classList.toggle("active",i===step));
-progress.style.width=((step)/(steps.length-1))*100+"%";
-}
-
-function nextStep(){
-if(currentStep<steps.length-1){
-currentStep++;
-showStep(currentStep);
-}
-}
-
-function prevStep(){
-if(currentStep>0){
-currentStep--;
-showStep(currentStep);
-}
-}
-
-showStep(currentStep);
-</script>
 
 </body>
 </html>
